test/sema/initialize-non-null-pointer-with-nullable-pointer.cx
// RUN: %not %cx -typecheck %s | %FileCheck %s

extern int&? foo();

void main() {
    // CHECK: [[@LINE+1]]:17: error: cannot assign 'int&?' to 'int&'
    int& f = foo(); // TODO: Implicitly unwrap with warning
}
